--- a/blog/templates/blog/exemplo.html
+++ b/blog/templates/blog/exemplo.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=>, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>EXEMPLO DO BLOG</h1>
-</body>
-</html>
+{% extends 'global/base.html' %} <!--puxou ou foi extendido de outro tema/template - é conhecido como herança-->
+
+{% block texto %} exemplo {% endblock texto %} <!-- puxa do block herdado  que foi - -->
