--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <h1>HOME PRINCIPAL</h1>
-</body>
-</html>
+{% extends 'global/base.html' %} <!--puxou ou foi extendido de outro tema/template - é conhecido como herança-->
+
+{% block texto %} MUDAR O TEXTO - HOME {% endblock texto %} <!-- puxa do block herdado  que foi - -->
